2009-02-02  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.MediaEngine/PlayerEngineService.cs:
	Fix bug I just introduced to TogglePlaying where if Paused we wouldn't
	start playing again when called (BGO #570051).

2009-02-02  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.ServiceStack/DbIteratorJob.cs: Fix
	build.

2009-02-02  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Bpm/Banshee.Bpm/BpmDetectJob.cs: Subclass from
	DbIteratorJob, making this class quite simple, and fixing a bug with
	getting stuck in an infinite loop processing a given item.

	* src/Extensions/Banshee.Bpm/Banshee.Bpm/BpmService.cs: Use new RunAsync
	method instead of Start.

2009-02-02  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Makefile.am:
	* src/Core/Banshee.Services/Banshee.ServiceStack/DbIteratorJob.cs: New
	subclass of UserJob for use by tasks that need to process N items from the
	database one at a time; eg BPM detection, cover art download, etc.

2009-02-02  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/TaskStatusButton.cs:
	Show only background UserJobs in the task status button.

2009-01-31  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Extensions/Banshee.Bookmarks/Banshee.Bookmarks/BookmarksService.cs:
	Explicitly convert integers coming from the DB, as Mono.Data.Sqlite
	returns them as Int64 (BGO #569966).

2009-01-30  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackActions.cs: Show the
	pause/stop button when Loading/Loaded.

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/ConnectedSeekSlider.cs:
	Handle Loading player state, set Live property on the position label, and
	use the position label's enum state property instead of a handful of bools

	* src/Core/Banshee.Services/Banshee.Streaming/RadioTrackInfo.cs: Start